# RocketApiTemplate

./: .env.development  .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/v1/: mod.rs  routes.rs  user_handlers.rs
src/config/: mod.rs
src/db/: mod.rs
