[package]
name = "RocketAPITemplate"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
dotenvy = "0.15.7"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.42.0", features = ["full"] }